--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     volumes:
       - overviewer:/srv/www:ro
     command: python3 -m http.server -d /srv/www
+    #restart: unless-stopped
 
   # Tooling (not automatically run)
   overviewer-gen:
@@ -32,10 +33,12 @@ services:
     environment:
       # Comment out to remove renders,
       #   or edit overviewer-config.py directly.
-      RENDER_SLICES: 1
-      RENDER_NIGHT: 1
-      RENDER_CAVES: 1
-      RENDER_HEATMAP: 1
+      #RENDER_SLICES: 1
+      #RENDER_NIGHT: 1
+      #RENDER_CAVES: 1
+      #RENDER_HEATMAP: 1
+      RENDER_NETHER: 1
+      RENDER_END: 1
     profiles:
       - tools
 
