--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3.8"
+version: "3.9"
 
 services:
   ds-java:
     image: itzg/minecraft-server
+    restart: unless-stopped
     env_file:
       - ./settings.env
     ports:
@@ -13,4 +14,33 @@ services:
       - ./data:/data
     stdin_open: true
     tty: true
+
+  # Reverse Proxy
+  nginx:
+    image: nginx:1.20-alpine
     restart: unless-stopped
+    ports:
+      - 443:443
+      - 80:80
+    volumes:
+      # nginx config
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      # shared with certbot (for https certs)
+      - ./data/certbot/conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    depends_on:
+      - django
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    profiles: ["reverse-proxy"]
+
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt/
+      - certbot_www:/var/www/certbot/
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    profiles: ["reverse-proxy"]
+
+volumes:
+  certbot_www:
