NOTIFY_DEBUG environment variable

--- a/notify/keys.env.template
+++ b/notify/keys.env.template
@@ -8,3 +8,6 @@ PUSHOVER_USER_KEY =
 
 # Slack - https://api.slack.com/apps
 SLACK_WEBHOOK_URL = 
+
+# Debug - (uncomment to show verbose logs)
+#NOTIFY_DEBUG=1
