--- a/settings.common.env
+++ b/settings.common.env
@@ -2,5 +2,5 @@ TYPE = "PAPER"
 VERSION = "1.20.1"
 EULA = "true"
 RCON = "true"
-MODRINTH_PROJECTS = "coreprotect,dynmap:beta,essentialsx"
+MODRINTH_PROJECTS = "coreprotect,dynmap:beta,essentialsx,simple-voice-chat"
 #DEBUG_HELPER = true
